-line hover effect added - arrows added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             font-size: 13px;
         }
 
+        svg line:hover {
+            stroke: green;
+            cursor: pointer;
+        }
+
         #affiliation {
             outline: 0;
         }
