added ability to center node

--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
     Hold <b>shift key</b> for multiselect
 </div>-->
 <div id="affiliation">
-    <svg></svg>
 </div>
 <div id="container"></div>
 
@@ -135,6 +134,9 @@
             <div class="row">
                 <div class="label">Email:</div>
                 <div class="value"><%= data.email %></div>
+            </div>
+            <div class="row">
+                <button id="doAction" style="float: right;">center</button>
             </div>
         </div>
     </div>
